# autoridade-sites

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CONTEXT.md  Makefile  PLAN_10_10.md  ROADMAP.md  SESSION.md  SESSIONS_LOG.md  SPEC_POLIMENTO_TECNICO.md  _test_colors.py  audit_data.py  audit_grid.py  audit_grid2.py  audit_grid3.py  audit_grid4.py  config-test.yaml  config-visual-test.yaml  config.example.yaml  config.yaml  cov_report.txt  coverage.json  generate.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  server.py  test_failures.txt  test_quick.py  tmp_mock_generate.py
cloudflare-worker/: README.md  index.js  wrangler.toml
core/: __init__.py  auth.py  cloudflare_pages_deploy.py  color_utils.py  config_loader.py  exceptions.py  gemini_client.py  home_renderer.py  imagen_client.py  job_queue.py  logger.py  magic_editor.py  mixer.py  openai_client.py  openrouter_client.py  output_builder.py  page_generator.py  schemas.py  site_data_builder.py  sitemap_generator.py  stats_accumulator.py  supabase_client.py  template_injector.py  template_renderer.py  topic_generator.py  utils.py  validator.py
dashboard/: app.js  index.html  style.css
docs/: PLAN_HERO_IMAGE_V2.md  SPEC_HERO_IMAGE_V2.md  SPEED_OPTIMIZATION_BRAINSTORM.md
examples/: test_config.yaml
frontend/: index.html
klema-dist/: index.html
routers/: clientes.py  jobs.py  leads.py  sites.py
scripts/: add_relatorio_btn.py  fix_delete_warning.py  fix_redeploy_corruption.py  fix_show_relatorio.py  fix_show_relatorio_v2.py  inject_modal_js.py
sitegen.egg-info/: PKG-INFO  (+2 more)
(+76 files in other folders)
